--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
 											</span>
 											<i class="fa fa-angle-right"></i>  food facilities
 										 </p>
-									</div><!--/.packages-para-->
+									</div><!--/.packages-para--><!--Please check the span icon abobe this-->
 									
 									<div class="about-btn">
 										<button  class="about-view packages-btn">
